--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "14.1.0",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.0",
